# saymed-pain-bprc

./: .env.example  .gitignore  README.md  docker-compose.prod-no-tls.yml  docker-compose.prod.yml  docker-compose.yml  logs.txt  raw_response.html  response.html
backend/: .env.example  Dockerfile  Dockerfile.prod  add_audio_cols.py  add_new_tabs_tables.py  add_patient_cols.py  debug_pdf.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/app/: config.py  db_init.py  deps.py  main.py  migrate_db.py  models.py  pdf.py  schemas.py  security.py  seed.py
backend/app/routers/: audio.py.txt
backend/app/uploads/: doctor_1e1e6e9f-cb55-421f-a238-910add284b83_bb26c42bf20449c6bd03bd7570f9c3c6.webm  doctor_e25e1de6-4803-47f3-9bc8-bf1dd9f8f96f_005adda462b24cef90044596019402d3.webm  doctor_e25e1de6-4803-47f3-9bc8-bf1dd9f8f96f_03e05aa917e84e8daf24a9fe31c40f4f.webm  doctor_e25e1de6-4803-47f3-9bc8-bf1dd9f8f96f_0d624ad46748425a9b0409644cc15e61.webm  doctor_e25e1de6-4803-47f3-9bc8-bf1dd9f8f96f_1756fac3248b44faa86dd7abd027c7b0.webm  doctor_e25e1de6-4803-47f3-9bc8-bf1dd9f8f96f_295ec00e64a64103930daa4772b7679c.webm  doctor_e25e1de6-4803-47f3-9bc8-bf1dd9f8f96f_2f5b384104d94af997eef4a86d86ed5f.webm  doctor_e25e1de6-4803-47f3-9bc8-bf1dd9f8f96f_37b25be1e5fb4dc0b3856f7c43bdda80.webm  doctor_e25e1de6-4803-47f3-9bc8-bf1dd9f8f96f_5b46227f31ef4c1098201b53b3b69416.webm  (+13 more)
backend/migrations/: 001_initial.ts  002_business.ts  003_transcript_analysis.ts
backend/src/: constants.ts  db.ts  index.ts  logger.ts  migrate.ts  redis.ts  seed.ts
backend/src/middleware/: auth.ts  (+1 more)
(+66 files in other folders)
